<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="by.vlfl.fxsuperpro.ui.screens.start.signup.step2.SignUpStep2ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/splash_screen_color">

        <include
            android:id="@+id/toolbar_residential_address"
            layout="@layout/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMainSignUpStep2"
            style="@style/TextAppearance.BankPro.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/sign_up_step2__main"
            app:layout_constraintBottom_toTopOf="@id/wrapperInputStreetAndNumberStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_residential_address"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapperInputStreetAndNumberStep2"
            style="@style/TextAppearance.BankPro.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_34"
            android:layout_marginEnd="@dimen/margin_16"
            app:boxStrokeColor="@color/gold_400"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/wrapperInputFloorApartmentStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMainSignUpStep2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputStreetAndNumberSignUpStep2"
                style="@style/TextAppearance.BankPro.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="false"
                android:text="@={vm.streetAndNumber}"
                android:background="@color/input_background_color"
                android:hint="@string/sign_up_step2__hint_street_and_number"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapperInputFloorApartmentStep2"
            style="@style/TextAppearance.BankPro.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            app:boxStrokeColor="@color/gold_400"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/wrapperInputPostalCodeStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrapperInputStreetAndNumberStep2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFloorApartmentStep2"
                style="@style/TextAppearance.BankPro.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="false"
                android:background="@color/input_background_color"
                android:hint="@string/sign_up_step2__hint_floor_apartment"
                android:inputType="number"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapperInputPostalCodeStep2"
            style="@style/TextAppearance.BankPro.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            app:boxStrokeColor="@color/gold_400"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/wrapperInputCityStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrapperInputFloorApartmentStep2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPostalCodeStep2"
                style="@style/TextAppearance.BankPro.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="false"
                android:text="@={vm.postalCode}"
                android:background="@color/input_background_color"
                android:hint="@string/sign_up_step2__hint_postal_code"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapperInputCityStep2"
            style="@style/TextAppearance.BankPro.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            app:boxStrokeColor="@color/gold_400"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/wrapperInputCountryOfResidenceSignUpStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrapperInputPostalCodeStep2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCitySignUpStep2"
                style="@style/TextAppearance.BankPro.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="false"
                android:text="@={vm.city}"
                android:background="@color/input_background_color"
                android:hint="@string/sign_up_step2__hint_city_town"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapperInputCountryOfResidenceSignUpStep2"
            style="@style/TextAppearance.BankPro.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            app:boxStrokeColor="@color/gold_400"
            app:layout_constraintBottom_toTopOf="@id/buttonNextSignUpStep2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrapperInputCityStep2">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCountryOfResidenceSignUpStep2"
                style="@style/TextAppearance.BankPro.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/input_background_color"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/sign_up__hint_country_of_residence"
                android:inputType="textCapWords|textNoSuggestions"
                android:text="@{vm.countryOfResidence.name}"
                android:onClick="@{() -> vm.openCountryOfResidenceScreen()}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNextSignUpStep2"
            style="@style/TextAppearance.BankPro.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_38"
            android:backgroundTint="@color/gold_400"
            android:enabled="@{vm.allFieldsValid}"
            android:onClick="@{() -> vm.openStep3()}"
            android:paddingTop="12dp"
            android:paddingBottom="14dp"
            android:text="@string/action_next"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>